# Game

./: .clang-format  .gitignore  .gitmodules  .ignore  Build.sh  CMakeLists.txt  Linux.make  Makefile  README.md  README.txt  SDL.c  SDL.h  TODO.txt  Watch.sh  build.zig  build.zig.zon  test.map
.github/workflows/: fuzz.yml
Code/: App.c  Host.c  Host.h  SDL.c  SDL.h  WASM.c  Watch.c
Code/Game/: Game.c  Menu.c  Menu.h  Weapon.c  Weapon.h  World.c  World.h
Code/Host/: AtlasPack.c  CMakeLists.txt  Ent.c  Ent.h  KeyValue.c  KeyValue.h  Main.c  Runtime.c  Runtime.h  SDL.c  SDL.h  SDL_Renderer.c  SDL_Renderer.h  SimpleCompress.c  Zip.c  Zip.h  Zip_Cli.c  Zip_Test.c
Code/Public/: Ent.h  Game.h  Init.c  Input.h  Math.c  Math.h  Mem.c  Mem.h  README.md  Render.c  Render.h  SDK.h  State.h  Types.h  UI.c  UI.h
Code/SDL/: SDL.c
ExampleMod/: CMakeLists.txt  ExampleMod.c  Linux.make  README.md
ExampleMod/Code/: Main.c
ExampleMod/Source/: Main.c
Ext/STB/: stb_rect_pack.h
Mods/Example/: CMakeLists.txt
Public/: Init.c  SDK.h  Shared.h  Types.h
assets/shaders/: basic_geometry.hlsl
example-mod/: CMakeLists.txt
example-mods/zig/: build.zig  build.zig.zon
game/: game.c  game.h  game_asset_preprocess.c  game_platform.h  game_png.c  game_png.h  game_rectangle_pack.c  game_rectangle_pack.h  game_ttf.c  game_ttf.h  game_types.h  game_wav.c  game_wav.h
game/test/: Makefile  README  test_png.c  test_ttf.c  test_wav.c
include/: SDK.h
linux/: linux.c  linux.h  linux_vulkan.c  linux_vulkan.h
src/: AssetPreprocess  BasicGeometry.frag.h  BasicGeometry.vert.h  Game  Makefile  SDL.c  SDL.h  SDL_gpu.c  SDL_gpu.h  app.cpp  app.h  atlaspacker.cpp  build.bat  build.sh  game.c  game.h  game_asset_preprocess.c  game_map.c  game_map.h  game_math.h  game_platform.h  game_png.c  game_png.h  game_rectangle_pack.c  game_rectangle_pack.h  game_ttf.c  game_ttf.h  game_types.h  game_wav.c  game_wav.h  inputmap.cpp  inputmap.h  linux.c  linux.h  linux_vulkan.c  linux_vulkan.h  main.cpp  msvc.c  wasm.cpp  wasm.h  (+6 more)
src/glsl/: BasicGeometry.frag  BasicGeometry.vert
src/hlsl/: BasicGeometry.hlsl
src/shaders/: regular.frag  (+1 more)
tests/: Makefile  README  test_map.c
(+16 files in other folders)
